--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 BEARER_TOKEN=""
 CONSUMER_KEY=""
 CONSUMER_SECRET=""
-ACCESS_TOKEN_KEY="-"
+ACCESS_TOKEN_KEY=""
 ACCESS_TOKEN_SECRET=""
 USER_NAME=""
 USER_ID=""
