--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,11 @@ edition = "2021"
 [dependencies]
 "twitter-v2" = "0.1"
 dotenv = "0.14"
-tokio = { version = "1", features = ["full"] }
-tokio-stream = "0.1"
-async-trait = "0.1.57"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 chrono = "0.4"
 lazy_static = "1.4.0"
+async-std = { version = "1", features = ["attributes", "tokio1"] }
 
 [lib]
 name = "lib"
