--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0.48"
 chrono = "0.4"
 lazy_static = "1.4.0"
 async-std = { version = "1", features = ["attributes", "tokio1"] }
+regex = "1"
 
 [lib]
 name = "lib"
